--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,11 +1,13 @@
 @import 'base/variables';
+@import 'base/reset';
 @import 'base/fonts';
-// @import 'base/mixins';
+
 @import 'base/typography';
 @import 'layout/structure';
 @import 'layout/containers';
 @import 'layout/lists';
 @import 'layout/inputs';
-// @import 'layout/buttons';
+@import 'layout/buttons';
+@import 'states';
 
 @import '~animate.css/animate.css';
