--- a/src/styles/layout/buttons.scss
+++ b/src/styles/layout/buttons.scss
@@ -1,11 +1,10 @@
-
 /* --------   Mixins: keep them LOCALIZED!   -------- */
 
 @mixin outline($default, $hover) {
   border-color: $default;
   color: $default;
   fill: $default;
-  background: transparent;
+  background: white;
 
   &:hover,
   &:active,
@@ -22,7 +21,7 @@
   color: $default;
   fill: $default;
   background: transparent;
-  // stroke: $default;
+  padding: 0.375rem 0;
 
   &:hover,
   &:active,
@@ -71,12 +70,18 @@ a, button, .link {
     svg { border-color: $jade-900; }
   }
 
-  &:hover, &:focus {
+  &:hover, &active, &:focus {
     color: $jade-700;
     fill: $jade-700;
+
     svg { border-color: $jade-700; }
   }
-  &:focus { outline: none; }
+
+  &:focus {
+    outline: none;
+    background: rgba(128, 128, 128, 0.2);
+  }
+
   &.href-plain { text-decoration: none; }
   &.inherit { color: inherit; }
 }
@@ -94,7 +99,7 @@ button.button,
 button[type="button"],
 button[type="reset"],
 button[type="submit"] {
-  // --- DEFAULT BUTTON COLOUR ---//
+  // --- DEFAULT BUTTON STYLING ---//
   -webkit-appearance: button;
   cursor: pointer;
   font: inherit;
