--- a/src/styles/layout/buttons.scss
+++ b/src/styles/layout/buttons.scss
@@ -104,12 +104,12 @@ button[type="submit"] {
   cursor: pointer;
   font: inherit;
   font-weight: bold;
-  line-height: 1.375rem;
+  line-height: 1.125rem;
   color: white;
   fill: white;
   text-align: center;
   text-decoration: none;
-  padding: 0.375rem 0.75rem;
+  padding: 0.5rem 0.75rem;
   background: $jade-500;
   border: 1px solid transparent;
   border-radius: 0.25rem;
@@ -225,6 +225,24 @@ button[type="submit"] {
         width: 1.125rem;
         height: 1.125rem;
       }
+
+      &.large {
+        padding: 0.5rem;
+
+        svg {
+          width: 1.625rem;
+          height: 1.625rem;
+        }
+      }
+
+      &.small {
+        padding: 0.25rem;
+
+        svg {
+          width: 0.875rem;
+          height: 0.875rem;
+        }
+      }
     }
 
     &.before svg { margin-right: 0.5rem; }
@@ -244,6 +262,30 @@ button[type="submit"] {
       color: $pearl-900;
       fill: $pearl-900;
       background: $pearl-50;
+    }
+  }
+
+  &.large {
+    font-size: 1.125rem;
+    line-height: 1.625rem;
+    padding: 0.5rem 1rem;
+
+    svg {
+      top: 0.25rem;
+      width: 1.125rem;
+      height: 1.125rem;
+    }
+  }
+
+  &.small {
+    font-size: 0.875rem;
+    padding: 0.25rem 0.5rem;
+    line-height: 1rem;
+
+    svg {
+      top: 0.125rem;
+      width: 0.75rem;
+      height: 0.75rem;
     }
   }
 }
