--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -53,9 +53,10 @@ $screen-width-small: 'screen and (min-width: 32rem)';
 $screen-max-small: 'screen and (max-width: 47.999rem)'; // use sparingly
 $screen-width-medium: 'screen and (min-width: 48rem)';
 $screen-width-large: 'screen and (min-width: 64rem)';
-$screen-width-xlarge: 'screen and (min-width: 96rem)';
+$screen-width-xlarge: 'screen and (min-width: 80rem)';
 
 // -- Panel Widths-- //
-$min-width: 48rem;
-$mid-width: 64rem;
-$max-width: 96rem;
+$small-width: 32rem;
+$medium-width: 48rem;
+$large-width: 64rem;
+$xlarge-width: 80rem;
