fix mobile viewport, mobile typography page

--- a/src/styles/layout/buttons.scss
+++ b/src/styles/layout/buttons.scss
@@ -152,7 +152,7 @@ button[type="submit"] {
 
   &:focus {
     outline: none;
-    box-shadow: 0 0 2px 1px $jade-100;
+    box-shadow: 0 0 2px 1px $pearl-500;
   }
 
   &::-moz-focus-inner {
