--- a/src/styles/layout/inputs.scss
+++ b/src/styles/layout/inputs.scss
@@ -1,3 +1,19 @@
+input {
+  margin: 0.5rem 0;
+  border-radius: 0.25rem;
+  border: 1px solid $pearl-300;
+  padding: 0.25rem;
+  background-color: $pearl-50;
+}
+
+label {
+  display: block;
+  margin: 1rem 0 0;
+  font-weight: bold;
+
+  &.label-inline { margin: 0.5rem 0.25rem; }
+}
+
 .toggle {
   display: inline-block;
   padding: 0;
