--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,13 +1,15 @@
 @import 'base/variables';
 @import 'base/reset';
 @import 'base/fonts';
-
 @import 'base/typography';
+@import 'base/links';
+
+@import 'layout/inputs';
+@import 'layout/buttons';
 @import 'layout/structure';
 @import 'layout/containers';
 @import 'layout/lists';
-@import 'layout/inputs';
-@import 'layout/buttons';
+
 @import 'states';
 
 @import '~animate.css/animate.css';
