flat button and SVG cleaup

--- a/src/styles/base/links.scss
+++ b/src/styles/base/links.scss
@@ -12,8 +12,6 @@ a, button, .link {
   border: 0;
   transition: all 300ms ease-out;
 
-  svg { vertical-align: middle; }
-
   // make inline SVG icons look and behave like linked text
   svg.inline {
     top: 0.125rem;
@@ -52,7 +50,7 @@ a, button, .link {
     svg { border-color: $jade-700; }
   }
 
-  &.href-plain { text-decoration: none; }
+
 
   @mixin variant($default, $active, $hover) {
     color: $default;
@@ -73,7 +71,7 @@ a, button, .link {
   &.alert { @include variant($amber-300, $amber-300, $amber-100); }
   &.neg { @include variant($ruby-500, $ruby-500, $ruby-700); }
   &.pos { @include variant($emerald-500, $emerald-500, $emerald-700); }
-  &.invert { @include variant($pearl-0, $pearl-50, $pearl-100); }
+  &.light { @include variant($pearl-0, $pearl-50, $pearl-100); }
   &.dark { @include variant($pearl-900, $pearl-900, $pearl-700); }
   &.small { font-size: 0.875rem; }
 
@@ -82,5 +80,6 @@ a, button, .link {
     line-height: 1.5rem;
   }
 
+  &.href-plain { text-decoration: none; }
   &.inherit { color: inherit; }
 }
