--- a/src/styles/base/reset.css
+++ b/src/styles/base/reset.css
@@ -33,6 +33,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  -webkit-tap-highlight-color: rgba(128, 128, 128, 0.2);
 }
 
 *,
@@ -60,4 +61,14 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+svg {
+  width: auto;
+  height: auto;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
