--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,5 @@
 @import 'base/variables';
-@import 'base/test';
+@import 'base/peak-reset';
 @import 'base/fonts';
 @import 'base/typography';
 @import 'base/links';
