--- a/src/styles/base/links.scss
+++ b/src/styles/base/links.scss
@@ -13,9 +13,9 @@ a, button, .link {
   border: 0;
   transition: all 300ms ease-out;
 
-  svg {
-    width: auto;
-    height: auto;
+  &.icon svg {
+    width: 1rem;
+    height: 1rem;
   }
 
   &::-moz-focus-inner {
