--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,6 @@
-@import 'base/variables';
-@import 'base/peak-reset';
 @import 'base/fonts';
+@import 'base/variables';
+@import 'base/reset';
 @import 'base/typography';
 @import 'base/links';
 
