--- a/src/styles/base/links.scss
+++ b/src/styles/base/links.scss
@@ -14,6 +14,7 @@ a, button, .link {
   transition: all 300ms ease-out;
 
   &.icon svg {
+    vertical-align: text-top;
     width: 1rem;
     height: 1rem;
   }
